# tree-sitter-cpp-example

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
